Basic ROM mapping implementation - No real advantage yet, but supports new FPGA logic - Use a INI text file for config

--- a/Brutzler/Brutzler.csproj
+++ b/Brutzler/Brutzler.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Crc32, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Crc32.1.1.0\lib\net46\Crc32.dll</HintPath>
     </Reference>
+    <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
+      <HintPath>..\packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
