--- a/Brutzler/packages.config
+++ b/Brutzler/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Crc32" version="1.1.0" targetFramework="net461" />
+  <package id="ini-parser" version="2.5.2" targetFramework="net46" />
 </packages>
