add ConnectOnStart option

--- a/Brutzler/App.config
+++ b/Brutzler/App.config
@@ -11,7 +11,10 @@
     <userSettings>
         <Brutzler.Properties.Settings>
             <setting name="ComPort" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="ConnectOnStartup" serializeAs="String">
+                <value>True</value>
             </setting>
         </Brutzler.Properties.Settings>
     </userSettings>
