--- a/Brutzler/Properties/Settings.settings
+++ b/Brutzler/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="ComPort" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ConnectOnStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
